# web_report_monaco

./: README.md  api_doc.yml  config.py  exceptions.py  models.py  pyproject.toml  report.py  requirements.txt  work_func.py
templates/: base.html  drivers.html  footer.html  index.html  one_driver.html  order_of_sorting.html  report.html
tests/: __init__.py  drivers.db  tests_py.py
