[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "report_of_monaco_vl_pol"
authors = [{name = "vl_pol", email = "vlad.pol.res@gmail.com"}]
description = "This script reads data from 3 files, orders racers by time and prints report that shows the top 15 racers and the rest after underline"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "1.2"


[project.urls]
"Homepage" = "https://git.foxminded.ua/foxstudent103611/task_6"


[tool.hatch.build.targets.wheel]
packages = ["report_of_monaco_vl_pol/pyproject.toml"]


[tool.poetry.dev-dependencies]
argparse = "3.2"
datetime = "3.11.1"
typing = "3.10.0.0"
os = "3.11.1"



